# pose_estimate_poc

./: .gitignore  .gitmodules  README.md  annotate.py  auto_crop.py
anno3d/: annotate3d.py  create_dataset.py  transform.py
crawler/: scrape.py
mlcore/sixdrepnet/: inference.py  main.py  module.py  pyproject.toml  train.py
mlcore/sixdrepnet/checkpoints/: best.ckpt
