[project]
name = "sixdrepnet"
version = "0.1.0"
description = ""
authors = [
    {name = "YuigaWada",email = "yuigawada@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lightning (==2.4.0)",
    "torch (>=2.5.1,<3.0.0)",
    "torchvision (>=0.20.1,<0.21.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "opencv-python (>=4.10.0.84,<5.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
